# torasu-studio

./: .gitignore  .gitmodules  CMakeLists.txt  build.sh  setup.sh
src/: index.html  main.cpp
src/state/: App.cpp  App.hpp  ElementDisplay.cpp  ElementDisplay.hpp  ElementIndex.cpp  ElementIndex.hpp  RenderQueue.cpp  RenderQueue.hpp  TreeManager.cpp  TreeManager.hpp
src/state/actions/: ActionBatch.cpp  ActionBatch.hpp  UserActions.cpp  UserActions.hpp
src/state/actions/tree/: CreateElement.cpp  CreateElement.hpp  DeleteElement.cpp  DeleteElement.hpp  UpdateLink.cpp  UpdateLink.hpp
src/state/examples/: Examples.cpp  LoadedExample.hpp  VideoExample.cpp
src/state/monitors/: ImageMonitor.cpp  ImageMonitor.hpp  Monitor.cpp  Monitor.hpp  NumberMonitor.cpp  NumberMonitor.hpp
src/ui/base/: Icon.cpp  Icon.hpp  StoredIcons.c  base.cpp  base.hpp  glfw_runner.cpp  glfw_runner.hpp  opengl_textures.cpp
src/ui/components/: ElementEditor.cpp  ElementEditor.hpp  NodeDisplayObj.hpp  SelectionMenu.hpp  Symbols.cpp  Symbols.hpp
src/ui/modules/: ActionHistoryModule.cpp  ActionHistoryModule.hpp  Module.hpp  NodeModule.cpp  NodeModule.hpp  ViewerModule.cpp  ViewerModule.hpp
src/ui/modules/monitor/: ImageMonitorDisplay.cpp  ImageMonitorDisplay.hpp  MonitorModule.cpp  MonitorModule.hpp  NumberMonitorDisplay.cpp  NumberMonitorDisplay.hpp
wasm-test-server/: compile_commands.json  package-lock.json  package.json  test-server.js
